<?xml version="1.0"?>
<package format="2">
  <name>ros_oneapi</name>
  <version>0.0.0</version>
  <description>The ros-oneAPI package</description>
  <maintainer email="ftyg@live.com">GnSight</maintainer>

  <license>GPLv3</license>

  <depend>roscpp</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
